fix double scrollbar

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -59,7 +59,7 @@
     min-height: 600px;
     -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     min-height: 100vh;
   }
 }
